--- a/static/scss/_style.scss
+++ b/static/scss/_style.scss
@@ -216,7 +216,7 @@ aside {
 	cursor:ns-resize;
 
 	overflow-x: hidden;
-    overflow-y: hidden;
+    overflow-y: scroll;
 
 	//@extend .mt1;
 	@extend .pl2;
